--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ docstring_parser==0.17.0
 executing==2.2.1
 fastjsonschema==2.21.2
 filelock==3.20.1
+filetype==1.2.0
 Flask==3.0.0
 Flask-Login==0.6.3
 fonttools==4.61.1
@@ -43,9 +44,10 @@ fqdn==1.5.1
 fsspec==2025.12.0
 google-api-core==2.28.1
 google-api-python-client==2.108.0
-google-auth==2.23.4
+google-auth==2.48.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
+google-genai==1.60.0
 googleapis-common-protos==1.72.0
 h11==0.16.0
 hf-xet==1.2.0
@@ -66,6 +68,7 @@ Jinja2==3.1.6
 jiter==0.12.0
 joblib==1.5.3
 json5==0.13.0
+jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
@@ -82,6 +85,13 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
 jupyterlab_widgets==3.0.16
 kiwisolver==1.4.9
+langchain-core==1.2.7
+langchain-google-genai==4.2.0
+langgraph==1.0.7
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.7
+langgraph-sdk==0.3.3
+langsmith==0.6.6
 lark==1.3.1
 lxml==6.0.2
 MarkupSafe==3.0.3
@@ -98,6 +108,8 @@ notebook==7.5.3
 notebook_shim==0.2.4
 numpy==2.3.5
 oauthlib==3.3.1
+orjson==3.11.6
+ormsgpack==1.12.2
 packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
@@ -139,6 +151,7 @@ referencing==0.37.0
 regex==2025.11.3
 requests==2.31.0
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
@@ -157,6 +170,7 @@ soupsieve==2.8
 SQLAlchemy==2.0.45
 stack-data==0.6.3
 sympy==1.14.0
+tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.2.1
@@ -175,11 +189,15 @@ tzlocal==5.3.1
 uri-template==1.3.0
 uritemplate==4.2.0
 urllib3==2.6.2
+uuid_utils==0.14.0
 wcwidth==0.5.0
 weasyprint==52.5
 webcolors==25.10.0
 webencodings==0.5.1
 websocket-client==1.9.0
+websockets==15.0.1
 Werkzeug==3.0.1
 widgetsnbextension==4.0.15
+xxhash==3.6.0
 zopfli==0.4.0
+zstandard==0.25.0
